@@ -16,6 +16,9 @@ Nov 20, 2014 - chris ---------------------------------------------------
 o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
 	Thomas Fähnle)
 
+Nov 17, 2014 - chris ---------------------------------------------------
+o The macro HAM_API_REVISION is now deprecated; use HAM_VERSION_* instead
+
 Nov 16, 2014 - chris ---------------------------------------------------
 o The github wiki is now linked into documentation/wiki
 
